# gmdgen

./: .gitattributes  .gitignore  AGENTS.md  AUTHORS  CHANGELOG.md  README.md  RELEASE_NOTES_0.1.0.md  fix_docs.py  fix_gui_environment_key.py  gmdgen_v0.1.0_release_notes.md  pyproject.toml  temp_refactor.py
.gmdgen/logs/: 20260509-154243-fallback.jsonl  20260510-110611-fallback.jsonl  20260510-110939-fallback.jsonl  20260510-111333-fallback.jsonl  20260510-111504-fallback.jsonl  20260510-111938-fallback.jsonl  20260510-112153-fallback.jsonl  20260510-112241-fallback.jsonl  20260510-114402-fallback.jsonl  20260510-114501-fallback.jsonl  20260510-114544-fallback.jsonl  20260510-114615-fallback.jsonl  20260510-121248-fallback.jsonl  20260510-121301-fallback.jsonl
20260510_205335_34be02/: generated_level_report.json
configs/: generate.yaml  train.yaml
docs/: EMERGENCY_STABILIZATION_LOG.md  ai_providers.md  algorithmic_audit.md  algorithmic_background.md  audio_conditioned.md  audio_conditioned_gd_generator_plan.md  auto_training.md  code_validation.md  configuration.md  data_cleaning_and_pattern_schema.md  dataset.md  debug_openai_generation.md  error_handling.md  eval_suite.md  extreme_quality_mode.md  fine_tuning_dataset.md  generation_quality.md  generation_report_contract.md  geode_integration.md  gmd_generation_pipeline.md  gui.md  learning_memory.md  low_cost_mode.md  ollama_planner_architecture.md  ollama_provider.md  optimization_strategy.md  output_bundle.md  project_direction.md  time_mapping_fixtures.md  trigger_schema.md  troubleshooting.md
docs/AI/: AI_GMD_GENERATION_GUIDE.md  CURRENT_GMD_ML_LEARNED_NOTES.md
docs/refactor/: AI_BASELINE_v0.1.0.md  REPORT_DOC_SYNC.md  REPORT_LOGGING.md  REPORT_ML_EFFICIENCY.md  REPORT_QUALITY.md  REPORT_REDESIGN.md
scripts/: generate.py  regenerate_pattern_fixtures.py  train.py  validate.py
src/gmdgen/: __init__.py  __main__.py  cli.py  errors.py  sanitize.py  (+1 more)
tests/: conftest.py  strip_app.py  strip_openai_app.py  strip_openai_app2.py  test_ai_cache.py  test_ai_context.py  test_ai_plan_normalization.py  test_ai_planning_control.py  test_ai_provider_chain.py  test_audio_conditioned.py  test_audio_file_inputs.py  test_audio_regression.py  test_auto_training.py  test_baseline_eval.py  test_call_budget.py  test_candidate_distinctness.py  test_candidate_quality_mode.py  test_candidate_ranker.py  test_cli_gui_only.py  test_code_validation.py  test_config_utils.py  test_critic.py  test_dataset_bootstrap.py  test_dataset_index.py  test_dataset_learning_profile.py  test_dataset_quality.py  test_decoder.py  test_description_encoding.py  test_docs_ollama_final.py  test_editor.py  test_editor_safety.py  test_error_handling.py  test_eval_suite.py  test_evaluator.py  test_extreme_ml_time_budget.py  test_extreme_ml_validation.py  test_fast_materializer.py  test_feedback.py  test_fine_tune_export.py  test_finetune_export.py  (+85 more)
tools/: add_spdx_headers.py  audit_dataset.py  doc_sync.py
(+287 files in other folders)
